home/static/css/tem.css
body {
    background-color: black;
    background-image: url(/static/img/bg_b_650x934.jpg);
    background-repeat: no-repeat;
    background-position: center 0;
    font-family: 'Inconsolata', monospace;
}

.main-form-container {
    padding-top: 18rem;
    margin: auto;
}

.main-form-container .main-logo {
    margin: auto;
    text-align: center;
    margin-bottom: 1rem;
}

.greetings {
    max-width: 330px;
    text-align: left;
    margin: auto;
    color: #eed;
    font-size: 0.9rem;
    padding: 1rem;
    background: rgba(0,0,0, 0.65);
}

footer {
    position: fixed;
    right: 0;
    bottom: 0;
    font-size: 9px;
    color: #888;
}

.input-error {
    color: white;
    padding: 0.2rem 0 0 0.2rem;
    font-size: 14px;
}

.btn-primary-outline {
    color: white;
    background-color: #444;
    border-color: black;
}

.btn-primary-outline:active,
.btn-primary-outline:hover,
.btn-primary-outline:focus {
    color: white;
    background-color: black;
    border-color: black;
}

@media all and (min-width: 500px) {
    .main-form-container {
      padding-top: 19rem;
      text-align: center;
    }
}

